# Estudos

./: conflict-files-obsidian-git.md
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  daily-notes.json  graph.json  hotkeys.json  templates.json  types.json  workspace.json
.obsidian/snippets/: academic-pdf-export.css
Anotações Cursos/: Redes.txt
Chess/src/: Piece.java  root.java
Códigos/: ArrayMultidimensional.java  AtividadesC.code-workspace  IPTUCalculator.java
Códigos/AtividadeJava/: Java  Vetor.txt  clients_p.csv  contador.txt  germio  index.html  index.txt  mensagem.txt  pom.xml
Códigos/AtividadesC/: Array.c  Sum.c  SumFunc.c  calc.c
Códigos/AtividadesJava/: ArrayMultidimensional.java  IPTUCalculator.java
Códigos/AtividadesSites/: atividade.r
Códigos/C/: CMakeLists.txt
Códigos/C/AU10/: au10ex1.c  estudando.c
Códigos/C/AU16/: au16ex1.c
Códigos/C/AU17/: au17ex1.c
Códigos/C/AU3/: au3ex1.c
Códigos/C/AU7/: au7ex1.c  au7ex2.c
Códigos/C/AU8/: au8ex1.c
Códigos/C/AU9/: teste.c
Códigos/Diagramas/: Finanças.simp  OSPrisao.simp  OSPrisao.simp.bak  decadencia.simp  dor.simp  (+3 more)
Excalidraw/: Drawing 2024-02-02 12.42.35.excalidraw.md  Drawing 2024-02-19 19.54.34.excalidraw.md  Drawing 2024-03-03 20.19.49.excalidraw.md  Drawing 2024-03-04 20.57.28.excalidraw.md
Faculdade Eng. Software/: Template.md
Imagens/: Desenho Array.md  Desenho Clean.md  Desenho Matriz.md  Desenho relação binária.md  Drawing 2023-07-29 15.02.34.excalidraw.md
Trabalho/: Horário.md  Impressão.md  Sergio Cunha.md  TODO.md
(+598 files in other folders)
