cmake_minimum_required(VERSION 3.28)
project(C C)

set(CMAKE_C_STANDARD 23)

add_executable(C main.c
        AU1/au1ex1.c
        AU2/au2ex1.c
        AU3/au3ex1.c
        AU3/au3ex2.c
        AU3/au3ex3.c
        AU4/au4ex1.c
        AU5/au5ex1.c
        AU6/atividades.c
        AU7/au7ex1.c
        AU7/au7ex2.c
        AU8/au8ex1.c)
